<resources>
    <string name="app_name">WifiBus</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="name">智能WIFI客户端</string>
    <string name="tel_hint">请输入手机号</string>
    <string name="login_button_renzheng">一键认证</string>
    <string name="login_button_surfing">开始上网</string>
    <string name="login_tips_first">第一次使用？请输入您的手机号认证上网</string>
    <string name="login_tips_used">是否使用下面号码认证上网？</string>
    <string name="local_resource">本地资源</string>
    <string name="bus_query">公交查询</string>
    <string name="stations_query">到站查询</string>
    <string name="earn_flow">赚流量</string>
    <string name="button1">前进</string>
    <string name="button2">后退</string>
    <string name="button3">刷新</string>
    <string name="button4">停止</string>
    <string name="button5">Go!</string>
    <string name="title_activity_local_res">LocalResActivity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="logout_menu">注销</string>
    <string name="settings_menu">设置</string>
    <string name="about_menu">关于</string>
    <string name="title_activity_bus_query">BusQuery</string>
    <string name="bus_query_hint">请输入您想查询的公交线路</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="search_noresultsfound">未找到结果</string>
    <string name="search_hint">搜索联系人</string>
    <string name="loading_routes">正在加载线路列表...</string>
    <string name="loading_stations">正在加载到站信息...</string>
    <string name="message_error_networkunavailable">"无可用网络。请检查网络连接。"</string>
    <string name="none_coming_bus">总站尚未发车</string>
</resources>
