<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" 
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/textview_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView_tips"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/login_tips_first"
        android:gravity="center_horizontal"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/edittext_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_tips"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/tel_hint" >
    </EditText>

    <Button
        android:id="@+id/button_login"
        style="@style/VidyoGreenButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edittext_tel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/green_button"
        android:text="@string/login_button_renzheng"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:src="@drawable/net_logo" />

</RelativeLayout>
